--- a/src/Components/ItemFilter/ItemFilter.css
+++ b/src/Components/ItemFilter/ItemFilter.css
@@ -3,3 +3,9 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.cargando{
+    font-size: 1.5rem;
+    color: #fffefe;
+    text-align: center;
+    margin-top: 2rem;
+}
